Fix typos spotted by referee 1

--- a/appendixC.tex
+++ b/appendixC.tex
@@ -50,7 +50,7 @@ The typical relative error related to this approximation can be shown to be of o
 Rejected trajectories are discarded from the statistics.
 Eventually, an effective ensemble of $N$ trajectories of duration $T_{a}$ is obtained, distributed according to $\mathbb{P}_{k}$.
 
- \EL{A key feature of the \ac{gktl} algorithm is that all resampled trajectories are solutions of the original dynamical. 
+ \EL{A key feature of the \ac{gktl} algorithm is that all resampled trajectories are solutions of the original dynamics. 
 %This is true for stochastic dynamics.
 Nevertheless, it should be noted that a small random perturbation is introduced in the cloning procedure to force clones from the same trajectory to separate, \emph{i.e.} artificial randomness is introduced so that the cloning procedure is effective for deterministic dynamics.   
 	As for the \ac{ams} algorithm, it has been checked that this perturbation did not affect the statistics of the sampled trajectories.}
