--- a/section3.tex
+++ b/section3.tex
@@ -125,7 +125,7 @@ As illustrated in Fig.~\ref{fig:density+streamlines}, this blockage is enforced 
 % 
 This scenario is better evidenced by Fig.~\ref{fig:vorticity_dynamics}, where the time history of the vorticity field around $t=t^\star$ for the same event is shown. 
 %
-Before the occurrence of the extreme event, positive vorticity originating from the bottom boundary layer develops in the near wake of the square. This positive vorticity  prevents the shedding of negative vorticity and enforces the development of a intense vortex against the base of the square. 
+Before the occurrence of the extreme event, positive vorticity originating from the bottom boundary layer develops in the near wake of the square. This positive vorticity  prevents the shedding of negative vorticity and enforces the development of an intense vortex against the base of the square. 
 As the blocking vortex is in turn advected downstream, the vortex against the base is released.
 %
 Consistently, one can argue that the typical duration of this scenario is related to the sweeping time of the flow past the obstacle, and is therefore of the order of $\tau_c$.
