--- a/section4.tex
+++ b/section4.tex
@@ -35,7 +35,7 @@ This achievement already represents a significant leap in the applicability of r
 \subsection{Extreme instantaneous drag forces with the \acl{ams} algorithm}
 \label{sec:ams}
 
-\EL{The \ac{ams} algorithm is here used with, trajectories of fixed duration $T_a$~\citep{lestang_computing_2018}.
+\EL{The \ac{ams} algorithm is here used with trajectories of fixed duration $T_a$~\citep{lestang_computing_2018}.
 %
 % Quick description of TAMS
 %
