--- a/section2.tex
+++ b/section2.tex
@@ -15,7 +15,7 @@ The drag exerted by a grid-generated turbulent flow onto a fixed squared obstacl
 %
 Although real-world applications would eventually imply three-dimensional dynamics, a simplified two-dimensional setting has been chosen here to reduce the computational cost and allow for a systematic study. 
 % 
-We believe that this system embeds the characteristic features that makes 
+We believe that this system embeds the characteristic features that make
 \EL{this study} both relevant and challenging for fluid-structure-interaction problems. 
 
 % rapid description of the flow
@@ -104,7 +104,7 @@ Fig.~\ref{fig:typical_vorticity} displays the evolution of the vorticity field a
 	\centering
 	\includegraphics[width=\linewidth]{fig3/fig3}
 	\caption{
-	\EL{Temporal evolution of the drag (in lattice units) acting on the square under the action of the impinging turbulent flow. The time has been normalised by the turnover time related the mean-flow velocity and the size of the obstacle, \emph{i.e.} $T_0=R/U$.} The \textit{return time} $r(a)$  is the averaged waiting time between the occurrence of peak fluctuations of amplitude larger than $a$. If the threshold $a$ is sufficiently high, one observes that $r(a)$ is much larger than the correlation time of the signal. The selected peak fluctuations are therefore well separated.}
+	\EL{Temporal evolution of the drag (in lattice units) acting on the square under the action of the impinging turbulent flow. The time has been normalised by the turnover time related to the mean-flow velocity and the size of the obstacle, \emph{i.e.} $T_0=R/U$.} The \textit{return time} $r(a)$  is the averaged waiting time between the occurrence of peak fluctuations of amplitude larger than $a$. If the threshold $a$ is sufficiently high, one observes that $r(a)$ is much larger than the correlation time of the signal. The selected peak fluctuations are therefore well separated.}
 		\label{fig:illustrate_return_time}
 \end{figure}
 
