Move body of paper into texfiles/ and rename main document to paper.tex

--- a/paper.tex
+++ b/paper.tex
@@ -120,11 +120,11 @@
       This paper is supplemented by a software repository containing the codes for the simulations and data analysis involved in this study: \url{https://github.com/tlestang/paper_extreme_drag_fluctuations}.
 \end{abstract}
 	
-\include{section1}
-\include{section2}
-\include{section3}
-\include{section4}
-\include{section5}
+\include{./texfiles/section1}
+\include{./texfiles/section2}
+\include{./texfiles/section3}
+\include{./texfiles/section4}
+\include{./texfiles/section5}
 
 \section{Acknowledgements}
 The authors thank Francesco Ragone, Corentin Herbert, Charles-Edouard Bréhier and Eric Simonnet for useful discussions and suggestions on various aspects of this work.
@@ -133,10 +133,10 @@ Simulations have been performed on the local HPC facilities at École Normale Su
 The facilities at PSMN are supported by the Auvergne-Rhône-Alpes region (GRANT CPRT07-13 CIRA) and the national Equip@Meso grant (ANR-10-EQPX-29-01).
 
 \appendix
-\include{appendixA}
-\include{appendixB}
-\include{appendixC}
-\include{appendixD}
+\include{./texfiles/appendixA}
+\include{./texfiles/appendixB}
+\include{./texfiles/appendixC}
+\include{./texfiles/appendixD}
 
 \bibliographystyle{jfm}
 \bibliography{biblio}
