Remove \EL{} macros

--- a/paper.tex
+++ b/paper.tex
@@ -80,16 +80,8 @@
 	long=Computational Fluid Dynamics,
 }
 
-\definecolor{myred}{HTML}{b30000}
-\definecolor{mygreen}{HTML}{008000}
-\newcommand{\EL}[1]{{\color{myred}{#1}}}
-\newcommand{\TL}[1]{{\color{mygreen}{#1}}}
-
-\newcommand{\ZZ}[1]{{\color{magenta}{#1}}}
-\newcommand{\QQ}[1]{{\color{green}{#1}}}
-
 \title{
-\EL{Numerical study of extreme mechanical efforts exerted by a turbulent flow on a bluff body by direct and rare-event sampling techniques}
+Numerical study of extreme mechanical efforts exerted by a turbulent flow on a bluff body by direct and rare-event sampling techniques
 }
 
 \author{Thibault Lestang\aff{1}\aff{2}
@@ -103,7 +95,7 @@
 \maketitle
 
 \begin{abstract}
-	\EL{This study investigates, by means of numerical simulations, extreme mechanical efforts exerted by a turbulent flow impinging on a bluff body, and examines the relevance of two distinct rare-event algorithms to efficiently sample these events. 
+	This study investigates, by means of numerical simulations, extreme mechanical efforts exerted by a turbulent flow impinging on a bluff body, and examines the relevance of two distinct rare-event algorithms to efficiently sample these events. 
 	%
 	The drag experienced by a squared obstacle placed in a turbulent channel flow (in two dimensions) is taken as a representative case study.
 	%
@@ -116,7 +108,7 @@
 	%
 	Practical evidence is given that the fast sweeping time of turbulent fluid structures past the obstacle has a strong influence on the efficiency of the rare-event algorithm. 
 	% 
-	While the \ac{ams} algorithm does not yield significant run-time savings as compared to direct sampling, the \ac{gktl} algorithm appears to be effective to sample very efficiently extreme fluctuations of the time-averaged drag and estimate related statistics such as return times.}
+	While the \ac{ams} algorithm does not yield significant run-time savings as compared to direct sampling, the \ac{gktl} algorithm appears to be effective to sample very efficiently extreme fluctuations of the time-averaged drag and estimate related statistics such as return times.
       This paper is supplemented by a software repository containing the codes for the simulations and data analysis involved in this study: \url{https://github.com/tlestang/paper_extreme_drag_fluctuations}.
 \end{abstract}
 	
