--- a/texfiles/appendixD.tex
+++ b/texfiles/appendixD.tex
@@ -23,6 +23,6 @@ Fig.~\ref{fig:pdf_drag_with_perturbation} shows that the statistics of the pertu
 \begin{figure}
   \centering
 \includegraphics[width=.7\linewidth]{fig23/fig23}
-\caption{\EL{\ac{pdf}s of (normalised) drag fluctuations obtained from the perturbed (at branching points) and unperturbed numerical simulations; $\epsilon$ is the relative amplitude of the perturbation.}}
+\caption{\ac{pdf}s of (normalised) drag fluctuations obtained from the perturbed (at branching points) and unperturbed numerical simulations; $\epsilon$ is the relative amplitude of the perturbation.}
 \label{fig:pdf_drag_with_perturbation}
 \end{figure}
